# nsargs

./: CMakeLists.txt  README.md  build.ps1  example.nsi  vcpkg.json
.github/workflows/: build.yml
src/: args.c  args.h  nsargs.c  util.c  util.h
test/: main.c
